# CS-465-Project01-Document-Search

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
api/: Dockerfile  README.md  app.py  document.py  generate_statistics.py  get_document_content.py  handle_query.py  install_stopwords.py  inverted_index.py  preprocess.py  pyproject.toml  upload_document.py
src/: App.tsx  DownloadStats.tsx  QueryTile.tsx  SharedSnackbar.tsx  UploadIcon.tsx  UploadTile.tsx  main.tsx
