[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["William Moss & Benjamin Weeg"]
readme = "README.md"

package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
